tf/modules/foundryvtt/manifests/sftp.yaml
apiVersion: v1
kind: Service
metadata:
  name: sftp
  namespace: foundry-vtt
spec:
  ports:
    - port: 22
      targetPort: 22
      protocol: TCP
  selector:
    app: sftp
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sftp
  namespace: foundry-vtt
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sftp
  template:
    metadata:
      labels:
        app: sftp
    spec:
      containers:
        - name: sftp
          image: atmoz/sftp:debian
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 22
          args: ["foundry:$(PWD):421:421:data"]
          volumeMounts:
            - name: data
              mountPath: /home/foundry/data
            - name: foundry-pub-key
              mountPath: /home/foundry/.ssh/keys/
            - name: sshd-config
              mountPath: /etc/ssh/sshd_config.d/sshd_config

      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: foundryvtt-pvc
        - name: sftp-config
        - name: foundry-pub-key
          secret:
            secretName: sftp-pub
            items:
              - key: ssh-public-key
                path: foundry.pub
        - name: sshd-config
          configMap:
            name: sftp-config
            items:
              - key: sshd-config
                path: sshd_config
