tf/modules/foundryvtt/manifests/foundryvtt-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: foundryvtt-ingress
  namespace: foundry-vtt
  annotations:
    nginx.ingress.kubernetes.io/auth-tls-secret: "foundry-vtt/thoughtcrimegames-ca-secret"
    nginx.ingress.kubernetes.io/auth-tls-verify-client: "off"
spec:
  tls:
  - hosts:
    - ${foundryvtt.domain}
    secretName: thoughtcrimegames-secret
  ingressClassName: nginx
  rules:
  - host: ${foundryvtt.domain}
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: foundry-vtt
            port:
              number: 80
